# CUDA-INT8-GEMM

./: CMakeLists.txt  README.md  cpu_gemm.h  gemm_i8.cuh  test_gemm_i8.cu  util.h
src/: fmha_i8.cu
